# log

./: .gitignore  CMakeLists.txt  build.bat
code/src/: log.hpp  platform_define.hpp  test.cpp
script/: build_windows.bat
